# ha-ecohome

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/ecohome/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  water_heater.py
custom_components/ecohome/translations/: en.json
tests/: conftest.py  test_climate.py  test_config_flow.py  test_init.py  test_sensor.py
