[project]
name = "ha-ecohome"
version = "0.1.3"
description = "Home Assistant integration for the Eco-Home heat pump"
requires-python = ">=3.14"

[project.urls]
Homepage = "https://github.com/sgielen/ha-ecohome"
Issues = "https://github.com/sgielen/ha-ecohome/issues"

[dependency-groups]
dev = [
    "pytest-homeassistant-custom-component",
    "ecohome>=0.1.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
